# banshee-soundcloud-extension

./: Makefile  Makefile.am  Makefile.in  SoundCloud.addin.xml  SoundCloud.csproj  SoundCloud.sln  SoundCloud.userprefs
Banshee.SoundCloud/: ActionEntryHandler.cs  AddArtistHandler.cs  BaseDialog.cs  IToolbarButtonHandler.cs  SCResources.cs  SoundCloudIO.cs  SoundCloudSource.cs  SoundSearchHandler.cs  SoundSearcher.cs
Resources/: ActiveSourceUI.xml  GlobalUI.xml
lib/: Banshee.SoundCloud.dll.mdb
