ASSEMBLY = Banshee.SoundCloud
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.SoundCloud/AddArtistHandler.cs \
	Banshee.SoundCloud/BaseDialog.cs \
	Banshee.SoundCloud/IToolbarButtonHandler.cs \
	Banshee.SoundCloud/SC.cs \
	Banshee.SoundCloud/SoundCloudIO.cs \
	Banshee.SoundCloud/SoundCloudSource.cs \
	Banshee.SoundCloud/SoundCloudSourceContents.cs \
	Banshee.SoundCloud/SoundSearchHandler.cs


RESOURCES =  \
	Resources/ActiveSourceUI.xml,Foo.Resources.ActiveSourceUI.xml \
	Resources/GlobalUI.xml,Foo.Resources.GlobalUI.xml \
	SoundCloud.addin.xml,Foo.SoundCloud.addin.xml \
	ThemeIcons/16x16/categories/soundcloud.png,Foo.ThemeIcons.16x16.categories.soundcloud.png \
	ThemeIcons/scalable/soundcloudd.svg,Foo.ThemeIcons.scalable.soundcloudd.svg

include $(top_srcdir)/build/build.mk
